# docs/swagger.json
@@ -113,17 +113,16 @@
         "auth.loginUserReturn": {
             "type": "object",
             "required": [
-                "email",
-                "password"
+                "email"
             ],
             "properties": {
                 "email": {
                     "type": "string"
                 },
-                "password": {
+                "publicAddress": {
                     "type": "string"
                 },
-                "publicAddress": {
+                "token": {
                     "type": "string"
                 }
             }
